--- a/index.html
+++ b/index.html
@@ -50,7 +50,30 @@
         >
       </nav>
     </header>
-    <div class="side_bar hidden"></div>
+    <div class="side_bar md:hidden fixed right-0 w-3/4 bg-black h-full text-white bottom-0 hidden top-0 z-50">
+      <nav class="my-auto text-xl flex flex-col">
+        <a
+          class="mx-4 px-5 pt-4 font-medium hover:text-pink-600 focus:text-pink-600 active"
+          href="#"
+          >Home</a
+        >
+        <a
+          class="mx-4 px-5 pt-4 font-medium hover:text-pink-600 focus:text-pink-600"
+          href="#about"
+          >About</a
+        >
+        <a
+          class="mx-4 px-5 pt-4 font-medium hover:text-pink-600 focus:text-pink-600"
+          href="#projects"
+          >Project</a
+        >
+        <a
+          class="mx-4 px-5 pt-4 font-medium hover:text-pink-600 focus:text-pink-600"
+          href="#contact"
+          >Contact</a
+        >
+      </nav>
+    </div>
     <div class="avatar w-full h-screen mt-20">
       <div
         style="box-shadow: 0 0px 2px 10px rgb(215, 215, 215)"
@@ -77,10 +100,12 @@
     <hr />
     <section class="p-2 md:px-60 bg-black h-fit text-white">
       <div id="about" class="pt-20">
-        <p class="title text-3xl">About me</p>
-        <div class="about-content flex flex-col md:flex-row justify-between mt-20">
-          <div>
-            <div class="relative my-10">
+        <p class="title text-3xl text-center md:text-left">About me</p>
+        <div
+          class="about-content flex flex-col md:flex-row justify-between mt-20"
+        >
+          <div class="h-96">
+            <div class="relative left-14 md:left-0">
               <div
                 class="w-64 h-72 overflow-hidden z-20 absolute rounded border"
               >
@@ -91,17 +116,17 @@
               ></div>
             </div>
           </div>
-          <div class="desciption w-2/3 text-lg">
+          <div class="desciption w-2/3 text-lg hidden md:inline-block">
             <p class="text-2xl">
               I'm Trần Tiến Đạt <span class="text-pink-600">Web Developer</span>
             </p>
-            <p class="mt-10 text-slate-400 hidden md:inline-block">
+            <p class="mt-10 text-slate-400">
               Hi! My name is Albert Walkers. I am a Web Developer, and I'm very
               passionate and dedicated to my work. With 20 years experience as a
               professional Web developer, I have acquired the skills and
               knowledge necessary to make your project a success.
             </p>
-            <div class="flex text-slate-200">
+            <div class="text-slate-200 md:flex hidden">
               <div class="w-full">
                 <span class="py-4 inline-block w-full"
                   >🎂 Birthday: 01/10/2002</span
@@ -128,32 +153,32 @@
         </div>
       </div>
       <div id="projects" class="pt-40 h-screen">
-        <h1 class="text-left text-2xl mb-10">My Project</h1>
-        <ul class="flex">
+        <h1 class="text-center md:text-left text-2xl mb-10">My Project</h1>
+        <ul class="hidden md:flex">
           <li class="p-2 mx-2 border-b-2 text-white border-red-500">
             Chat room Reactjs
           </li>
           <li class="p-2 mx-2 border-b-2 text-white">Todo App Reactjs</li>
           <li class="p-2 mx-2 border-b-2 text-white">Shoping cart Php Mvc</li>
         </ul>
-        <div class="project flex justify-between mt-10">
-          <div class="relative">
+        <div class="project flex flex-col md:flex-row justify-between mt-10">
+          <div class="relative text-center md:w-1/2">
             <span
-              class="text-5xl hover:cursor-pointer absolute -left-6 top-20 shadow bg-pink-500 rounded"
+              class="text-5xl hover:cursor-pointer absolute -left-0 top-24 shadow bg-pink-500 rounded"
               >&#60;</span
             >
             <img
-              class="flex-1 inline"
+              class="flex-1 inline w-3/4 md:w-full"
               width="400px"
               src="./img/project1-1.png"
               alt=""
             />
             <span
-              class="text-5xl hover:cursor-pointer absolute -right-6 top-20 shadow bg-pink-500 rounded"
+              class="text-5xl hover:cursor-pointer absolute -right-0 top-24 shadow bg-pink-500 rounded"
               >&#62;</span
             >
           </div>
-          <div class="project-description inline flex-1 mx-10">
+          <div class="project-description inline flex-1 m-10">
             <p class="text-2xl mb-4">Todo App reactjs</p>
             <p class="text-slate-300">
               Ứng dụng cho phép người dùng thêm sửa xoá các công việc của mình
@@ -173,24 +198,24 @@
         </div>
       </div>
       <div id="contact" class="h-96 pt-40">
-        <h1 class="text-left text-2xl">My contact</h1>
-        <div class="flex justify-between mt-20">
+        <h1 class="md:text-left text-center text-2xl">My contact</h1>
+        <div class="flex md:flex-row flex-col justify-between mt-20">
           <div
-            class="card shadow-2xl rounded bg-slate-900 w-1/4 h-52 text-center flex flex-col"
+            class="card  shadow-2xl rounded bg-slate-900 w-full mb-4 md:mr-4 h-52 text-center flex flex-col"
           >
             <span class="text-5xl p-4 block">📞</span>
             <span class="text-xl block">0868650722</span>
             <button class="m-auto bg-pink-500 rounded px-4 p-2">Call</button>
           </div>
           <div
-            class="card shadow-2xl rounded bg-slate-900 w-1/4 h-52 text-center flex flex-col"
+            class="card  shadow-2xl rounded bg-slate-900 w-full mb-4 md:mr-4 h-52 text-center flex flex-col"
           >
             <span class="text-5xl p-4 block">📧</span>
             <span class="text-xl block">trandatyl1@gmail.com</span>
             <button class="m-auto bg-pink-500 rounded px-4 p-2">Send</button>
           </div>
           <div
-            class="card shadow-2xl rounded bg-slate-900 w-1/4 h-52 text-center flex flex-col"
+            class="card  shadow-2xl rounded bg-slate-900 w-full mb-4 md:mr-4 h-52 text-center flex flex-col"
           >
             <span class="text-5xl p-4 block"
               ><i
